testing/framework/resources/Advanced/Failing/mondrian/query6097.q
select count(*) as c0 from test_lp_xxx_fact as test_lp_xxx_fact;
